# pure-fa-openmetrics-exporter

./: .gitignore  Dockerfile.rhubi  Dockerfile.slim  Makefile  README.md  go.mod  go.sum  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yaml  stale.yaml
cmd/fa-om-exporter/: main.go
docs/: deployment-examples.md
examples/k8s-deployment/: grafana-deployment.yaml  grafana-pvc.yaml  prometheus-config.yaml  prometheus-deployment.yaml  prometheus-pvc.yaml  prometheus-svc.yaml
extra/: deployment.md  o11y_platforms.md
extra/datadog/: datadog_purefa-1.2.0-py2.py3-none-any.whl  datadog_purefa-1.3.0-py2.py3-none-any.whl
extra/grafana/: README.md  grafana-purefa-flasharray-overview.json
extra/prometheus/: alertmanager.yml  prometheus.yaml  prometheus.yml  purefa_alerts_rules.yml  purefa_pods_rules.yml
internal/config/: auth_tokens.go  auth_tokens.go.old
internal/openmetrics-exporter/: .alerts_collector.go.swp  aaa.sh  alerts_collector.go  alerts_collector_test.go  arrays_collector.go  arrays_collector_test.go  arrays_controllers_collector.go  arrays_controllers_collector_test.go  arrays_performance_collector.go  arrays_performance_collector_test.go  arrays_space_collector.go  arrays_space_collector_test.go  bbb.sh  collector.go  common_tests.go  dirs_performance_collector.go  dirs_performance_collector_test.go  dirs_space_collector.go  dirs_space_collector_test.go  drives_collector.go  drives_collector_test.go  hardware_collector.go  hardware_collector_test.go  host_connections_collector.go  host_connections_collector_test.go  hosts_performance_collector.go  hosts_performance_collector_test.go  hosts_space_collector.go  hosts_space_collector_test.go  network_interface_collector_test.go  network_interfaces_collector.go  network_interfaces_performance_collector.go  network_interfaces_performance_collector_test.go  pod_replica_links_lag_collector.go  pod_replica_links_lag_collector_test.go  pod_replica_links_performance_collector.go  pod_replica_links_performance_collector_test.go  pods_performance_collector.go  pods_performance_collector_test.go  pods_performance_replication_collector.go  (+15 more)
internal/rest-client/: alerts.go  alerts_test.go  arrays.go  arrays_performance.go  arrays_performance_test.go  arrays_test.go  connections.go  connections_test.go  controllers.go  controllers_test.go  directories.go  directories_performance.go  directories_performance_test.go  directories_test.go  drives.go  drives_test.go  flasharray_client.go  flasharray_client_test.go  hardware.go  hardware_test.go  hosts.go  hosts_balance.go  hosts_balance_test.go  hosts_performance.go  hosts_performance_test.go  hosts_test.go  network_interface.go  network_interface_test.go  network_performance.go  network_performance_test.go  pod_replica_links_lag.go  pod_replica_links_lag_test.go  pod_replica_links_performance.go  pod_replica_links_performance_test.go  pods.go  pods_performance.go  pods_performance_replication.go  pods_performance_replication_test.go  pods_performance_test.go  pods_test.go  (+13 more)
specification/metrics/: purefa-metrics.md
src/pure_fa_openmetrics_exporter/: __init__.py  pure_fa_exporter.py
test/data/: alerts.json  alerts_open.json  arrays.json  arrays_performance.json  connections.json  controllers.json  directories.json  directories_performance.json  drives.json  hardware.json  hosts.json  hosts_balance.json  hosts_performance.json  network_interfaces.json  network_interfaces_performance.json  pod_replica_links_lag.json  pod_replica_links_performance.json  pods.json  pods_performance.json  pods_performance_replication.json  ports.json  subscriptions.json  versions.json  volume_groups.json  volume_groups_performance.json  volumes.json  volumes_performance.json
tests/: conftest.py  test_06_array_perf.py
tests-orig/: conftest.py
tests-orig/functional/: test_01_home.py  test_02_array.py  test_03_volumes.py  test_05_pods.py  test_07_errors.py
tests-orig/unit/: test_01_mock.py  test_02_array_info.py  test_03_array_hw.py  test_04_array_events.py  test_05_array_space.py  test_06_array_perf.py  test_07_directory_space.py  test_08_directory_perf.py  test_09_host_conn.py  test_10_host_space.py  test_11_host_perf.py  test_12_pod_space.py  (+5 more)
(+71 files in other folders)
